# GNURADIO_LABCOMUIS_J1C_G2

./: J1C_02_1.py  Multiplicacion_Señales.grc  Practica_1  README.md  TeoremaNyquist.grc
Practica_1/: Capturas.odt  Diezmado_Interpolacion.grc  Multiplicacion.py  Practica 1. LabComUIS_2022_1.docx  Practica_1.txt  tutorial_two_4.py
Practica_2/: MedidaAtenuacion_Final.xlsx  Modulos_J1C_02_Suma_Vector.block.yml  Practica_2.txt  Practica_2_1.py
Practica_3/: Practica_3.py  Practica_3.txt  Practica_3_1.grc
Practica_3/Imagenes/: Imagenes.txt
Practica_3/Imagenes_3_2/: Imagenes_Practica_3_2.txt
Practica_3/Modulos_J1C_02/: MANIFEST.md  Modulos_J1C_02.txt
Practica_3/Modulos_J1C_02/apps/: CMakeLists.txt
Practica_3/Modulos_J1C_02/docs/: CMakeLists.txt  README.Modulos_J1C_02
Practica_3/Modulos_J1C_02/lib/: CMakeLists.txt
Practica_3/Practica_3_2/: Archivos_Practica_3_2.txt  Multiplicacion.grc  Multiplicacion.py
Practica_3/gr-Modulos_J1C_02/: CMakeLists.txt  Modulos_Practica_3.txt
Practica_3/gr-Modulos_J1C_02/python/bindings/: CMakeLists.txt
Practica_3/grc/: CMakeLists.txt
Practica_3/python/: CMakeLists.txt
Practica_4/: Envolvente_Compleja _Modulador_SSB.grc  Practica_4.txt  TransmisorAM.grc  TransmisorAM.py
Practica_5/: Archivos_Practica_5.txt
Practica_5/Practica_5_1/: Archivos_5_1  EnvolventeComplejaPM.grc  Envolvente_Compleja.grc  MODULACION_PM.py  ModulacionPM.grc  ModulacionPM.py  Modulacion_PM.grc  Modulacion_PM.py  Modulacion_PM_2.grc  Modulacion_PM_2.py
Practica_5/Practica_5_2/: Archivos_5_2.txt  DemoduladorFM.grc  DemoduladorFM.py
(+24 files in other folders)
